--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +104,27 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
 }
+/* 
+textarea {
+  overflow: hidden;
+  height: auto !important;
+  min-height: 48px;
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
